use latest buildx binary
Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,6 +1,8 @@
 FROM alpine:latest
 
-RUN apk add --no-cache docker-cli-buildx
 COPY ./parallel-image-build /usr/local/bin/parallel-image-build
+COPY --from=docker/buildx-bin /buildx /usr/libexec/docker/cli-plugins/docker-buildx
+
+RUN apk add --no-cache docker-cli
 
 ENTRYPOINT [ "/usr/local/bin/parallel-image-build" ]
