--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,7 +45,7 @@ builds:
   flags:
   - -trimpath
   ldflags:
-  - -s -w
+  - -s -w -X github.com/maksim-paskal/parallel-image-build/internal.Version={{.Version}}-{{.ShortCommit}}-{{.Timestamp}}
   goos:
   - linux
   goarch:
